# podkernel

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.md  activate  autogen.sh  bootstrap.sh  fmt  include.sh  lint  pyproject.toml  run  typecheck  watcher
.autogen.d/: 01virtualenv.sh
.githooks/: pre-commit
examples/python/: Dockerfile
examples/rocm-pytorch/: Dockerfile
examples/rust/: Dockerfile
podkernel/: kernelspec.py  logging.py  models.py
podkernel/cli/: main.py
tests/: test_kernelspec.py
